flux/ollama/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  hostnames:
  - ollama.int.beansnet.net
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-gateway
    namespace: istio-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: ollama
      port: 11434
    matches:
    - path:
        type: PathPrefix
        value: /
